refactoring to prepare support of relative url in XmlModuleDescriptorUpdater
git-svn-id: https://svn.apache.org/repos/asf/incubator/ivy/core/trunk@551867 13f79535-47bb-0310-9956-ffa450edef68